# soapy-utils

./: LICENSE
soapy-file/: CMakeLists.txt  FileDeviceSupport.cpp
soapy-virtual/: CMakeLists.txt  VirtualDeviceSupport.cpp
